tests/machine/x/c/short_circuit.error
line: 0
error: output mismatch
-- got --
776478729
776478739
-- want --
false
true
   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:53Z
