tests/machine/x/c/short_circuit.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:53Z
#include <stdio.h>
#include <stdlib.h>

int boom(int a, int b) {
  printf("boom\n");
  return 1;
}

int main() {
  printf("%d\n", (0 && boom(1, 2)) ? "true" : "false");
  printf("%d\n", (1 || boom(1, 2)) ? "true" : "false");
  return 0;
}
